feat: member validation from frontend 1.  password and password2 matching check on real time 2.  remove error-message after server validation when input is clicked

--- a/src/main/resources/static/css/components/custom.css
+++ b/src/main/resources/static/css/components/custom.css
@@ -27,7 +27,7 @@
 .label__error-container{
     height: 1rem;
 }
-.label__error{
+.label__error,.label__error2{
     color: var(--color-error);
     font-size: 0.75rem;
     font-weight: 500;
@@ -60,6 +60,10 @@
 .input--member:focus{
     background-color: var(--color-accent);
     color: var(--color-primary);
+}
+
+.hide{
+    display: none;
 }
 
 .select input[type=radio]{
