--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -22,5 +22,5 @@
     <!--CSS-->
     <link rel="stylesheet" href="/css/style.css">
     <!--JS-->
-    <script type="module" src="/js/header.js"></script>
+    <script src="/js/header.js" defer></script>
 </head>
