--- a/src/main/resources/templates/members/add-member.html
+++ b/src/main/resources/templates/members/add-member.html
@@ -6,12 +6,13 @@
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 가입하면 다양한 이벤트가 기다리고 있습니다.">
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="/js/kakao-address.js"></script>
+    <script src="/js/validation.js" defer></script>
 </head>
 <body>
 <header th:replace="~{/fragments/header :: header}"></header>
 <main class="main__container">
     <h1 class="main__title">회원 가입</h1>
-    <form class="member-add__form" action="/members/add" method="post" th:object="${memberAddDTO}">
+    <form id="member" class="member-add__form" action="/members/add" method="post" th:object="${memberAddDTO}">
         <label class="label" for="memberId">
             <h5 class="label__title">아이디*</h5>
             <input id="memberId" name ="memberId" class="input input--member input--lg" type="text" th:field="*{memberId}" placeholder="영소문자 및 숫자(5~20자)" autocomplete="off" />
@@ -31,6 +32,7 @@
             <h5 class="label__title">비밀번호 확인*</h5>
             <input id="memberPw2" name ="memberPw2" class="input input--member input--lg" type="password" placeholder="공백 이외의 모든 문자(8~20자)" />
             <div class="label__error-container">
+                <h6 id="memberPw2Error" class="label__error2 hide">비밀번호가 일치하지 않습니다.</h6>
                 <h6 class="label__error" th:errors="*{memberPw2}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
