--- a/src/main/resources/templates/members/update-member.html
+++ b/src/main/resources/templates/members/update-member.html
@@ -7,6 +7,7 @@
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="/js/kakao-address.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10" defer></script>
+    <script src="/js/validation.js" defer></script>
 </head>
 <body>
 <header th:replace="~{/fragments/login-header :: header}">
@@ -39,6 +40,7 @@
             <h5 class="label__title">비밀번호 확인*</h5>
             <input id="memberPw2" name ="memberPw2" class="input input--member input--lg" type="password" placeholder="공백 이외의 모든 문자(8~20자)" autocomplete="off"/>
             <div class="label__error-container">
+                <h6 id="memberPw2Error" class="label__error2 hide">비밀번호가 일치하지 않습니다.</h6>
                 <h6 class="label__error" th:errors="*{memberPw2}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
