--- a/src/main/resources/templates/members/member-login.html
+++ b/src/main/resources/templates/members/member-login.html
@@ -5,6 +5,7 @@
     <title>PERION - 로그인 페이지</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
     <script type="module" src="/js/pages/member-login.js" defer></script>
+    <script src="/js/validation.js" defer></script>
 </head>
 <body>
 <header th:replace="~{/fragments/header :: header}"></header>
@@ -13,7 +14,7 @@
     <div class="label__error-container" th:object="${memberLoginDTO}">
         <h6 class="label__error" th:if="${#fields.hasGlobalErrors()}" th:each="err: ${#fields.globalErrors()}"  th:text="${err}">에러 메시지를 출력합니다.</h6>
     </div>
-    <form class="login__form" th:action method="post" th:object="${memberLoginDTO}">
+    <form id="member" class="login__form" th:action method="post" th:object="${memberLoginDTO}">
         <label class="label" for="memberId">
             <h5 class="label__title">아이디</h5>
             <input id="memberId" name="memberId" class="input input--member login__id" type="text" th:field="*{memberId}" autocomplete="off"/>
