--- a/src/main/resources/templates/members/update-member.html
+++ b/src/main/resources/templates/members/update-member.html
@@ -14,7 +14,7 @@
 </header>
 <main class="main__container">
     <h1 class="main__title" th:text="|${session.loginMember.getMemberId()}님의 회원 정보|"></h1>
-    <form th:action method="post" th:object="${memberUpdateDTO}">
+    <form id="member" th:action method="post" th:object="${memberUpdateDTO}">
         <label class="label" for="memberPw">
             <h5 class="label__title" >아이디</h5>
             <input id="memberId" name ="memberId" th:field="*{memberId}" class="input input--update" type="text" readonly/>
@@ -60,7 +60,7 @@
         </label>
         <label class="label" for="memberPostalCode">
             <h5 class="label__title">우편번호*</h5>
-            <input id="memberPostalCode" name=memberPostalCode class="input input--mi" type="text" th:field="*{memberPostalCode}" readonly placeholder="클릭 시 자동입력" onclick="execDaumPostalcode()" />
+            <input id="memberPostalCode" name=memberPostalCode class="input input--mi" type="text" th:field="*{memberPostalCode}" readonly placeholder="우편번호 찾기 버튼 클릭"  />
             <button type="button" class="btn btn--mi btn--black btn--address" onclick="execDaumPostalcode()">우편번호 찾기</button>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberPostalCode}">에러 메시지를 출력합니다.</h6>
