--- a/src/main/resources/templates/admins/notice/admin-notice-modify.html
+++ b/src/main/resources/templates/admins/notice/admin-notice-modify.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
   <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
   <head th:admin-head>
-    <div th:remove="tag" th:replace="~{/fragments/admin-head :: admin-head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/admin-head :: admin-head} "></div>
     <!--CSS-->
     <link rel="stylesheet" href="/css/pages/admins/admins-notice-modify.css" />
   </head>
   <body>
-    <header th:replace="~{/fragments/admin-login-header :: admin-login-header}">
+    <header th:replace="~{fragments/admin-login-header :: admin-login-header}">
     </header>
 
-    <aside th:replace="~{/fragments/admin-sidebar :: admin-sidebar}">
+    <aside th:replace="~{fragments/admin-sidebar :: admin-sidebar}">
     </aside>
 
     <main>
