--- a/src/main/resources/templates/members/delete-member.html
+++ b/src/main/resources/templates/members/delete-member.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 회원 탈퇴 페이지</title>
 </head>
 <body>
-<header th:replace="~{/fragments/login-header :: header}">
+<header th:replace="~{fragments/login-header :: header}">
 </header>
 <main class="main__container">
     <h1 class="main__title">회원 탈퇴</h1>
