--- a/src/main/resources/templates/members/member-info.html
+++ b/src/main/resources/templates/members/member-info.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 마이 페이지</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<header th:replace="~{/fragments/login-header :: header}">
+<header th:replace="~{fragments/login-header :: header}">
 </header>
 <section class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
