--- a/src/main/resources/templates/orders/member-order.html
+++ b/src/main/resources/templates/orders/member-order.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION -  주문 입력</title>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="/js/pages/kakao-address-order.js"></script>
     <script src="/js/pages/order.js"></script>
 </head>
 <body>
-<header th:replace="~{/fragments/login-header :: header}"></header>
+<header th:replace="~{fragments/login-header :: header}"></header>
 <main class="main__container">
     <h1 class="main__title">주문 상품 정보</h1>
     <div class="section__order">
