--- a/src/main/resources/templates/qna/qna-add.html
+++ b/src/main/resources/templates/qna/qna-add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 질문 등록</title>
     <link rel="stylesheet" href="/css/pages/user/qna-add.css">
 </head>
