--- a/src/main/resources/static/css/components/header.css
+++ b/src/main/resources/static/css/components/header.css
@@ -1,15 +1,20 @@
 header{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     position: fixed;
     top:0;
     width: 100%;
     height: 3.4375rem;
-    padding: 0 15rem;
     background-color: var(--color-primary);
     box-shadow: rgba(0, 0, 0,0.24) 0 3px 8px;
     z-index:10;
+}
+.header__container{
+    display: flex;
+    width: 1060px;
+    justify-content: space-between;
+    align-items: center;
 }
 .header__logo{
     font-size: 1.5rem;
@@ -84,14 +89,10 @@ header{
     display: none;
 }
 
-@media screen and (max-width: 1440px) {
-    header{
-        padding: 0 6rem;
-    }
-}
+
 @media screen and (max-width: 1024px) {
-    header{
-        padding: 0 4rem;
+    .header__container{
+        margin: 0 4rem;
     }
 }
 
