--- a/src/main/resources/static/css/pages/user/home.css
+++ b/src/main/resources/static/css/pages/user/home.css
@@ -5,13 +5,13 @@
 }
 .new-items__container{
     display: grid;
-    width: 100%;
+    width: 1060px;
     height: 55%;
     grid-template-columns: repeat(4,1fr);
     margin-top: 4rem;
     gap: 1rem;
-    min-width: 60%;
-    min-height: 55%;
+    /*min-width: 60%;*/
+    /*min-height: 55%;*/
 }
 
 .btn--index{
@@ -113,7 +113,7 @@ address{
 
 @media screen and (max-width: 1024px) {
     .new-items__container{
-        padding: 0 8rem;
+        margin: 0 4rem;
         grid-template-columns: repeat(2,1fr);
         grid-template-rows: repeat(2,1fr);
     }
@@ -126,7 +126,7 @@ address{
 
 @media screen and (max-width: 768px) {
     .new-items__container{
-        padding: 0 4rem;
+        margin: 0 4rem;
         grid-template-columns: repeat(2,1fr);
         grid-template-rows: repeat(2,1fr);
     }
@@ -145,7 +145,7 @@ address{
 
 @media screen and (max-width: 600px) {
     .new-items__container{
-        padding: 0 4rem;
+        margin: 0 4rem;
         grid-template-columns: repeat(1,1fr);
         grid-template-rows: repeat(4,1fr);
     }
