--- a/src/main/resources/templates/admins/admin-homeTest.html
+++ b/src/main/resources/templates/admins/admin-homeTest.html
@@ -5,11 +5,11 @@
     <title>admin_main</title>
 </head>
 <body>
-<header th:replace="~{/fragments/admin-login-header :: admin-login-header}"></header>
+<header th:replace="~{fragments/admin-login-header :: admin-login-header}"></header>
 이 html파일은 admin 메인페이지 제작필요시 수정/삭제 하셔도됩니다.
 <form th action method="post">
     <button>로그아웃</button>
 </form>
 </body>
-<section th:replace="~{/fragments/kakaomap :: kakaomap}"></section>
+<section th:replace="~{fragments/kakaomap :: kakaomap}"></section>
 </html>
