--- a/src/main/resources/templates/admins/admin-login.html
+++ b/src/main/resources/templates/admins/admin-login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION-관리자 로그인 페이지</title>
     <meta name="description" content="관리자 페이지">
 </head>
 <body>
-<header th:replace="~{/fragments/admin-header :: admin-header}"></header>
+<header th:replace="~{fragments/admin-header :: admin-header}"></header>
 <main class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
     <div class="label__error-container" th:object="${adminLoginDTO}">
