--- a/src/main/resources/templates/admins/admin-search-review.html
+++ b/src/main/resources/templates/admins/admin-search-review.html
@@ -3,7 +3,7 @@
   <head th:admin-head>
     <div
       th:remove="tag"
-      th:replace="~{/fragments/admin-head :: admin-head} "
+      th:replace="~{fragments/admin-head :: admin-head} "
     ></div>
     <!--CSS-->
     <link rel="stylesheet" href="/css/pages/admins/admins-review.css" />
@@ -11,10 +11,10 @@
   </head>
   <body>
     <header
-      th:replace="~{/fragments/admin-login-header :: admin-login-header}"
+      th:replace="~{fragments/admin-login-header :: admin-login-header}"
     ></header>
 
-    <aside th:replace="~{/fragments/admin-sidebar :: admin-sidebar}"></aside>
+    <aside th:replace="~{fragments/admin-sidebar :: admin-sidebar}"></aside>
 
     <main>
       <div class="main">
