--- a/src/main/resources/templates/admins/item/admins-item-add.html
+++ b/src/main/resources/templates/admins/item/admins-item-add.html
@@ -3,17 +3,17 @@
   <head>
     <div
       th:remove="tag"
-      th:replace="~{/fragments/admin-head :: admin-head} "
+      th:replace="~{fragments/admin-head :: admin-head} "
     ></div>
     <!--CSS-->
     <link rel="stylesheet" href="/css/pages/admins/admins-item-add.css" />
   </head>
   <body>
     <header
-      th:replace="~{/fragments/admin-login-header :: admin-login-header}"
+      th:replace="~{fragments/admin-login-header :: admin-login-header}"
     ></header>
 
-    <aside th:replace="~{/fragments/admin-sidebar :: admin-sidebar}"></aside>
+    <aside th:replace="~{fragments/admin-sidebar :: admin-sidebar}"></aside>
 
     <main>
       <div class="main">
