--- a/src/main/resources/templates/admins/notice/admin-notice-detail.html
+++ b/src/main/resources/templates/admins/notice/admin-notice-detail.html
@@ -3,16 +3,16 @@
 <head th:admin-head>
     <div
             th:remove="tag"
-            th:replace="~{/fragments/admin-head :: admin-head} "
+            th:replace="~{fragments/admin-head :: admin-head} "
     ></div>
     <link rel="stylesheet" href="/css/pages/admins/admins-notice-detail.css"/>
 </head>
 <body>
 <header
-        th:replace="~{/fragments/admin-login-header :: admin-login-header}"
+        th:replace="~{fragments/admin-login-header :: admin-login-header}"
 ></header>
 
-<aside th:replace="~{/fragments/admin-sidebar :: admin-sidebar}"></aside>
+<aside th:replace="~{fragments/admin-sidebar :: admin-sidebar}"></aside>
 
 <main>
     <div class="main">
