--- a/src/main/resources/templates/admins/qna/admin-qna.html
+++ b/src/main/resources/templates/admins/qna/admin-qna.html
@@ -1,14 +1,14 @@
   <!DOCTYPE html>
   <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
   <head th:admin-head>
-    <div th:remove="tag" th:replace="~{/fragments/admin-head :: admin-head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/admin-head :: admin-head} "></div>
     <!--CSS-->
     <link rel="stylesheet" href="/css/pages/admins/admins-member.css">
     <link rel="stylesheet" href="/css/pages/admins/admins-qna.css">
   </head>
   <body>
-    <header th:replace="~{/fragments/admin-login-header :: admin-login-header}"></header>
-    <aside th:replace="~{/fragments/admin-sidebar :: admin-sidebar}"></aside>
+    <header th:replace="~{fragments/admin-login-header :: admin-login-header}"></header>
+    <aside th:replace="~{fragments/admin-sidebar :: admin-sidebar}"></aside>
     <main>
       <div class="main">
         <div class="admin_member"> QnA </div>
