--- a/src/main/resources/templates/carts/nonmember-cart-list.html
+++ b/src/main/resources/templates/carts/nonmember-cart-list.html
@@ -2,13 +2,13 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <script defer src="/js/nonmember-updatecart.js"></script>
     <!--<script defer src="/js/nonmember-getjsondata.js"></script>-->
     <title>비회원 장바구니 조회</title>
 </head>
 <body>
-<header th:replace="~{/fragments/login-header :: header}"></header>
+<header th:replace="~{fragments/login-header :: header}"></header>
 
 <main>
     <h1>여기는 nonmember-cart-list입니다.</h1><hr>
