--- a/src/main/resources/templates/info/find-pw.html
+++ b/src/main/resources/templates/info/find-pw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - ID/PW 찾기 페이지</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
     <script type="module" src="/js/pages/member-login.js" defer></script>
@@ -36,7 +36,7 @@
 <!--    </script>-->
 </head>
 <body>
-<header th:replace="~{/fragments/header :: header}"></header>
+<header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
     <h1 class="main__title">비밀번호 재설정</h1>
     <form id="passwordForm" action="/members/info/pw/update" method="post">
