--- a/src/main/resources/templates/items/item-list.html
+++ b/src/main/resources/templates/items/item-list.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 모든 상품들</title>
     <meta name="description" content="최신 트렌드의 아우터, 이너, 팬츠 등 다양한 상품이 있습니다. 트렌디한 상품을 원하시는 남성분들에게 추천합니다  ">
     <link rel="stylesheet" href="/css/pages/user/items.css">
 </head>
 <body>
-<header th:if="${session.loginMember != null}" th:replace="~{/fragments/login-header :: header}">
+<header th:if="${session.loginMember != null}" th:replace="~{fragments/login-header :: header}">
 </header>
-<header th:unless="${session.loginMember != null}" th:replace="~{/fragments/header :: header}">
+<header th:unless="${session.loginMember != null}" th:replace="~{fragments/header :: header}">
 </header>
 <section class="main__container item-list__container">
     <h1 class="main__title" th:if="${Category} == 'all' and ${session.ifSearched} == false">All</h1>
