--- a/src/main/resources/templates/login-home.html
+++ b/src/main/resources/templates/login-home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-   <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+   <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
    <title>PERION 공식 온라인 쇼핑몰</title>
    <meta name="description" content="웹페이지 설명">
    <script src="/js/pages/login-home.js" defer></script>
@@ -9,7 +9,7 @@
    <script src = "/js/star-home.js" defer></script>
 </head>
 <body>
-<header th:replace="~{/fragments/login-header :: header}">
+<header th:replace="~{fragments/login-header :: header}">
 </header>
 <img class=home__background-img src="/images/diego-sanchez-DEDhybzzBwc-unsplash.webp" alt="background-image"/>
 <main class="section__container">
@@ -116,6 +116,6 @@
       </section>
    </section>
 </main>
-<footer th:replace="~{/fragments/footer :: footer}"></footer>
+<footer th:replace="~{fragments/footer :: footer}"></footer>
 </body>
 </html>
