--- a/src/main/resources/templates/orders/member-order-detail.html
+++ b/src/main/resources/templates/orders/member-order-detail.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 회원 주문 상세 조회</title>
     <script src="/js/pages/order.js"></script>
 </head>
 <body>
-<header th:replace="~{/fragments/login-header :: header}"></header>
+<header th:replace="~{fragments/login-header :: header}"></header>
 <main class="main__container section">
         <h1 class="main__title">나의 주문 상세</h1>
         <table class = "table__client table--2">
