--- a/src/main/resources/templates/orders/member-order-success.html
+++ b/src/main/resources/templates/orders/member-order-success.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 주문 완료</title>
 </head>
 <body>
-<header th:replace="~{/fragments/login-header :: header}"></header>
+<header th:replace="~{fragments/login-header :: header}"></header>
 <main class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
     <h1 class="main__title after--logo">주문이 무사히 완료되었습니다.</h1>
