--- a/src/main/resources/templates/orders/nonmember-order-check.html
+++ b/src/main/resources/templates/orders/nonmember-order-check.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 비회원 주문 조회</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
     <script type="module" src="/js/pages/member-login.js" defer></script>
     <script src="/js/nonmember-ordercheck.js"></script>
 </head>
 <body>
-<header th:replace="~{/fragments/header :: header}"></header>
+<header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
     <h1 class="main__title">비회원 주문 조회</h1>
         <label class="label" for="">
