--- a/src/main/resources/templates/orders/nonmember-order-delete-success-test.html
+++ b/src/main/resources/templates/orders/nonmember-order-delete-success-test.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 고객 주문 취소 완료</title>
     <script type="text/javascript" src="/js/pages/order.js" defer></script>
 </head>
 <body>
-<header th:replace="~{/fragments/header :: header}"></header>
+<header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
     <h1 class="main__title after--logo">주문 취소가 무사히 완료되었습니다.</h1>
