--- a/src/main/resources/templates/orders/nonmember-order.html
+++ b/src/main/resources/templates/orders/nonmember-order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - 비회원 주문</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
     <link rel="stylesheet" href="/css/pages/user/order.css">
@@ -9,7 +9,7 @@
     <script src="/js/kakao-address.js"></script>
 </head>
 <body>
-<header th:replace="~{/fragments/header :: header}"></header>
+<header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
     <h1 class="main__title">비회원 주문 정보 입력</h1>
     <form action = "/orders/create" method="post" th:object="${nonMemberOrderAddDTO}">
