--- a/src/main/resources/templates/reviews/item-review-more.html
+++ b/src/main/resources/templates/reviews/item-review-more.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <div th:remove="tag" th:replace="~{/fragments/head :: head} "></div>
+    <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <title>PERION - Review</title>
     <link rel="stylesheet" href="/css/pages/user/review-member.css">
 
 </head>
 <body>
-<header th:if="${session.loginMember != null}" th:replace="~{/fragments/login-header :: header}">
+<header th:if="${session.loginMember != null}" th:replace="~{fragments/login-header :: header}">
 </header>
-<header th:unless="${session.loginMember != null}" th:replace="~{/fragments/header :: header}">
+<header th:unless="${session.loginMember != null}" th:replace="~{fragments/header :: header}">
 </header>
         <h1 class="main__title">
             <a th:text="${itemName} + ' 리뷰 목록'"
