--- a/src/main/resources/static/css/components/footer.css
+++ b/src/main/resources/static/css/components/footer.css
@@ -55,4 +55,45 @@ footer{
     footer{
         padding: 0 2rem;
     }
+    .footer__info h4{
+        font-size: 1rem;
+    }
+    .footer__info span{
+        font-size: 0.75rem;
+    }
+    .footer__info{
+        gap:1rem;
+    }
+    .footer__copyright-sns span{
+        font-size: 0.75rem;
+    }
+    .footer__logo-img{
+        width: 3rem;
+    }
+    .footer__sns{
+        width: 2rem;
+    }
+}
+@media screen and (max-width: 600px) {
+    .footer__info h4{
+        font-size: 0.75rem;
+    }
+    .footer__info span{
+        font-size: 0.5rem;
+    }
+    .footer__info{
+        gap:1rem;
+    }
+    .footer__logo-img{
+        width: 3rem;
+    }
+    .footer__logo-title{
+        font-size: 1rem;
+    }
+    .footer__copyright-sns span{
+        font-size: 0.6rem;
+    }
+    .footer__sns{
+        width: 1.25rem;
+    }
 }
