--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
             <nav class="header__nav">
                 <ul class="header__lists">
                     <li class="header__list header__nav-shop">
-                        <a  href="/items/all">쇼핑몰</a>
+                        <a  id=nav-shop__link href="/items/all">쇼핑몰</a>
                         <ul class="nav-shop__menus">
                             <li class="nav-shop__menu"><a class="nav-shop__menu--title" href="/items/all">All</a></li>
                             <li class="nav-shop__menu"><a class="nav-shop__menu--title" href="/items/outer">Outer</a></li>
@@ -31,4 +31,5 @@
                 </ul>
             </nav>
     </div>
+    <img class="header__toggle" src="/images/icons/menu.svg">
 </header>
